--- a/e3-manager/pom.xml
+++ b/e3-manager/pom.xml
@@ -15,7 +15,7 @@
 		<module>e3-manager-pojo</module>
 		<module>e3-manager-dao</module>
 		<module>e3-manager-service</module>
-		<module>e3-manager-web</module>
+		<module>e3-manager-interface</module>
 	</modules>
 
 	<build>
