--- a/e3-manager-web/pom.xml
+++ b/e3-manager-web/pom.xml
@@ -10,7 +10,7 @@
 	<packaging>war</packaging>
 
 	<dependencies>
-	<!-- Spring -->
+		<!-- Spring -->
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-context</artifactId>
@@ -74,7 +74,7 @@
 			<version>${jsp-api.version}</version>
 			<scope>provided</scope>
 		</dependency>
-		
+
 		<!-- dubbo,zookeeper坐标 -->
 		<!-- dubbo 相关 -->
 		<dependency>
@@ -92,14 +92,26 @@
 			<artifactId>zkclient</artifactId>
 			<version>${zkclient.version}</version>
 		</dependency>
-		
+		<!-- 文件上传组件 -->
+		<dependency>
+			<groupId>commons-fileupload</groupId>
+			<artifactId>commons-fileupload</artifactId>
+			<version>${commons-fileupload.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>fastdfs_client</groupId>
+			<artifactId>fastdfs_client</artifactId>
+			<version>1.25</version>
+		</dependency>
+
 		<dependency>
 			<groupId>cn.e3mall</groupId>
 			<artifactId>e3-manager-interface</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
+
 	</dependencies>
-	
+
 	<build>
 		<plugins>
 			<!-- 配置Tomcat插件 -->
